--- a/01-01/index.html
+++ b/01-01/index.html
@@ -2,18 +2,21 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Responsive Web Design</title>
+	<title>Responsive Web Design - Plantilla de Inicio</title>
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
 	<div class="container">
 
-		<header>
+		<header class="clear">
 			<div class="logo"></div>
 			<nav></nav>
 		</header>
 
 		<section></section>
 		<aside></aside>
+
+		<div class="clear"></div>
 
 		<footer></footer>
 
