Nuevos archivos y avances

--- a/01-01/index.html
+++ b/01-01/index.html
@@ -10,7 +10,13 @@
 
 		<header class="clear">
 			<div class="logo"></div>
-			<nav></nav>
+			<nav>
+				<ul>
+					<li><a href="#">Inicio</a></li>
+					<li><a href="#">nosotros</a></li>
+					<li><a href="#">Contacto</a></li>
+				</ul>
+			</nav>
 		</header>
 
 		<section></section>
