--- a/01-03/index.html
+++ b/01-03/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Responsive Web Design - Agregando Media Queries</title>
+	<title>Responsive Web Design - Editando CSS Basado en MediaQueries</title>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
@@ -19,8 +19,12 @@
 			</nav>
 		</header>
 
-		<section></section>
-		<aside></aside>
+		<section>
+			Texto de prueba
+		</section>
+		<aside>
+			contenido barra
+		</aside>
 
 		<div class="clear"></div>
 
