--- a/02-01/index.html
+++ b/02-01/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Responsive Web Design - Plantilla de Inicio</title>
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<title>Responsive Web Design - Editando CSS Basado en MediaQueries</title>
+	<link rel="stylesheet" type="text/css" href="css/styles.css?1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 <body>
 	<div class="container">
@@ -24,8 +25,13 @@
 		<div class="clear"></div>
 		</header>
 
-		<section></section>
-		<aside></aside>
+		<section>
+			Texto de prueba
+		</section>
+
+		<aside>
+			contenido barra
+		</aside>
 
 		<div class="clear"></div>
 
