--- a/01-02/index.html
+++ b/01-02/index.html
@@ -9,7 +9,10 @@
 	<div class="container">
 
 		<header class="clear">
-			<div class="logo"></div>
+			<div class="logoWrap">
+					<div class="logo"></div>
+			</div>
+
 			<nav>
 				<ul>
 					<li><a href="#">Inicio</a></li>
@@ -17,6 +20,8 @@
 					<li><a href="#">Contacto</a></li>
 				</ul>
 			</nav>
+
+		<div class="clear"></div>
 		</header>
 
 		<section></section>
