--- a/01-03/index.html
+++ b/01-03/index.html
@@ -9,7 +9,10 @@
 	<div class="container">
 
 		<header class="clear">
-			<div class="logo"></div>
+			<div class="logoWrap">
+					<div class="logo"></div>
+			</div>
+
 			<nav>
 				<ul>
 					<li><a href="#">Inicio</a></li>
@@ -17,11 +20,14 @@
 					<li><a href="#">Contacto</a></li>
 				</ul>
 			</nav>
+
+		<div class="clear"></div>
 		</header>
 
 		<section>
 			Texto de prueba
 		</section>
+
 		<aside>
 			contenido barra
 		</aside>
