Cambios a la estructura
cambios

--- a/02-01/index.html
+++ b/02-01/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Responsive Web Design - Editando CSS Basado en MediaQueries</title>
-	<link rel="stylesheet" type="text/css" href="css/styles.css?1">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<title>Responsive Web Design - Plantilla de Inicio</title>
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
 	<div class="container">
@@ -25,13 +24,8 @@
 		<div class="clear"></div>
 		</header>
 
-		<section>
-			Texto de prueba
-		</section>
-
-		<aside>
-			contenido barra
-		</aside>
+		<section></section>
+		<aside></aside>
 
 		<div class="clear"></div>
 
