Seccion principal terminada
Seccion principal terminada

--- a/04-02/consejos.html
+++ b/04-02/consejos.html
@@ -52,11 +52,11 @@
 
 
         <header>
-                <div class="contenedor ">
+                <div class="contenedor">
                         <div class="logo">
                             <div class="logowrapper">
                                 <a href="index.html">
-                                     <img src="img/logo.svg">
+                                     
                                  </a>
                             </div>
                         </div> <!-- .logo -->
@@ -67,9 +67,14 @@
                                 <li><a href="visitar.html">que visitar</a></li>
                                 <li><a href="consejos.html">consejos</a></li>
                                 <li><a href="contacto.html">contacto</a></li>
+
+                                <div class="clearfix"></div>
                             </ul>
                         </nav>
+
+                    <div class="clearfix"></div>
                 </div>
+                <div class="clearfix"></div>
         </header>
 
 
@@ -78,7 +83,6 @@
                 
             </section>
         </div>
-
 
         <footer>
             <div class="contenedor">
@@ -90,7 +94,7 @@
                             <li><a href="contacto.html">contacto</a></li>
                     </ul>
                 </nav>
-                <div class="clear"></div>
+                <div class="clearfix"></div>
             </div> <!-- ./contenedor -->
 
                 <div class="footer">
