--- a/04-02/index.html
+++ b/04-02/index.html
@@ -56,7 +56,7 @@
                         <div class="logo">
                             <div class="logowrapper">
                                 <a href="index.html">
-                                     <img src="img/logo.svg">
+                                     
                                  </a>
                             </div>
                         </div> <!-- .logo -->
@@ -67,9 +67,14 @@
                                 <li><a href="visitar.html">que visitar</a></li>
                                 <li><a href="consejos.html">consejos</a></li>
                                 <li><a href="contacto.html">contacto</a></li>
+
+                                <div class="clearfix"></div>
                             </ul>
                         </nav>
+
+                    <div class="clearfix"></div>
                 </div>
+                <div class="clearfix"></div>
         </header>
 
         <div class="contenedor">
@@ -77,6 +82,10 @@
                 <section id="slider" class="slider">
                          <img src="img/slider_1.png" alt="Imagen Slider">
                 </section>
+
+        </div>
+
+        <div class="contenedor">
 
                 <section id="visitar" class="visitar">
 
@@ -92,10 +101,12 @@
                                     <img src="img/donde_visitar.svg" alt="que visitar">
                                     <h3>Que visitar</h3>
                                 </div>
-                                <div class="clear"></div>
+                                <div class="clearfix"></div>
                 </section>
 
+        </div>
 
+        <div class="contenedor">
                 <section id="galeria" class="galeria">
 
                         <h2>Galería de imagenes</h2>
@@ -124,6 +135,7 @@
                         </div>
                 </section>
 
+                <div class="clearfix"></div>
         </div>
 
         <footer>
@@ -136,7 +148,7 @@
                             <li><a href="contacto.html">contacto</a></li>
                     </ul>
                 </nav>
-                <div class="clear"></div>
+                <div class="clearfix"></div>
             </div> <!-- ./contenedor -->
 
                 <div class="footer">
