--- a/04-02/boilerplate.html
+++ b/04-02/boilerplate.html
@@ -56,7 +56,7 @@
                         <div class="logo">
                             <div class="logowrapper">
                                 <a href="index.html">
-                                     <img src="img/logo.svg">
+                                     
                                  </a>
                             </div>
                         </div> <!-- .logo -->
@@ -67,13 +67,18 @@
                                 <li><a href="visitar.html">que visitar</a></li>
                                 <li><a href="consejos.html">consejos</a></li>
                                 <li><a href="contacto.html">contacto</a></li>
+
+                                <div class="clearfix"></div>
                             </ul>
                         </nav>
+
+                    <div class="clearfix"></div>
                 </div>
+                <div class="clearfix"></div>
         </header>
 
         <div class="contenedor">
-            <section class="contenido contactos">
+            <section class="contenido">
                 
             </section>
         </div>
@@ -90,7 +95,7 @@
                             <li><a href="contacto.html">contacto</a></li>
                     </ul>
                 </nav>
-                <div class="clear"></div>
+                <div class="clearfix"></div>
             </div> <!-- ./contenedor -->
 
                 <div class="footer">
